objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Activities__c</fullName>
        <inlineHelpText>Common expenses in this category include the A/V equipment, Guest speakers, Nightlife, Golf, and other entertainment expenses.</inlineHelpText>
        <label>Activities &amp; Entertainment Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Catering__c</fullName>
        <inlineHelpText>Includes all food and beverage charges, including tips and gratuities.</inlineHelpText>
        <label>Catering Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Contingency__c</fullName>
        <inlineHelpText>Depending on the size or complexity of this event, you may want to add as much as up to 20% as a contingency.</inlineHelpText>
        <label>Contingency Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Decor__c</fullName>
        <inlineHelpText>Included expenses for decor, such as centerpieces, florals, tent rentals, etc.</inlineHelpText>
        <label>Decor Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Other__c</fullName>
        <inlineHelpText>Other expenses not included in previous categories.</inlineHelpText>
        <label>Other Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Printing__c</fullName>
        <inlineHelpText>Items include invitations, name badges, program booklets, event signage and banners.</inlineHelpText>
        <label>Printing Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Site_Rental__c</fullName>
        <inlineHelpText>Projected rental fees for the event and function space, housekeeping, baggage handling, and related expenses.</inlineHelpText>
        <label>Site Rental Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <formula>Budget_Site_Rental__c + Budget_Catering__c + Budget_Transportation__c + Budget_Decor__c +  Budget_Printing__c + Budget_Activities__c + Budget_Other__c + Budget_Contingency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total projected expenses</inlineHelpText>
        <label>Total Budget (Expected Gross Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Transportation__c</fullName>
        <inlineHelpText>Includes shuttles, coaches, event transfers, and any related expenses.</inlineHelpText>
        <label>Transportation Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Full__c</fullName>
        <formula>Registered_Attendees__c /  Maximum_Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Full</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <label>Center</label>
        <picklist>
            <picklistValues>
                <fullName>AFRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Evaluation__c</fullName>
        <description>Enter Event Evaluation Score post-Event (1-5, with 5 as the highest). Average of Session Rating.</description>
        <label>Event Evaluation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agency-wide Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASA Outreach Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASA Infusion Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/Local Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational/Academia Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Vendor Account primarily responsible for managing this event</description>
        <inlineHelpText>Select an Account with the Type = &apos;Event Vendor&apos; for this event.</inlineHelpText>
        <label>Event Vendor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Event Vendor</value>
            </filterItems>
            <infoMessage>Please select an Account with the Type = &apos;Event Vendor&apos; for this event.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Vision__c</fullName>
        <label>Event Vision</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expenses_Activities__c</fullName>
        <label>Activities &amp; Entertainment Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Activities &amp; Entertainment</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Catering__c</fullName>
        <label>Catering Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Catering</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Decor__c</fullName>
        <label>Decor Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Decor</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Other__c</fullName>
        <label>Other Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Printing__c</fullName>
        <label>Printing Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Printing</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Site_Rental__c</fullName>
        <label>Site Rental Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Site Rental</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Transportation__c</fullName>
        <label>Transportation Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Transportation</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Attendance__c</fullName>
        <label>Final Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <label>Location Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Map_to_Venue__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;+ Venue_Street_Address_1__c + &quot;, &quot; + Venue_City__c + &quot;, &quot; + Venue_State__c + &quot; &quot; +  Venue_Postal_Code__c + &quot; &quot; +  Venue_Country__c , &quot;Google Map&quot;, &quot;_blank&quot;)</formula>
        <label>Map to Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Needed__c</fullName>
        <label>Materials Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Registration__c</fullName>
        <inlineHelpText>Enter Maximum Registration # allowed for this event.</inlineHelpText>
        <label>Maximum Registration #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Actual_Cost__c</fullName>
        <formula>Total_Expenses__c - Total_Actual_MDF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Expected_Cost__c</fullName>
        <formula>Budget_Total__c - Total_Expected_MDF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Expected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor_Contact_Phone__c</fullName>
        <formula>Primary_Vendor_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary vendor contact for this event.</description>
        <inlineHelpText>This is the primary vendor contact for this event, filtered by list of available contacts for this vendor account.</inlineHelpText>
        <label>Primary Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Event_Vendor_Account__c</valueField>
            </filterItems>
            <infoMessage>Please select the primary vendor contact for this event. Choose from the list of available contacts for this vendor</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_Attendees__c</fullName>
        <inlineHelpText>Running total of Event Registrations for this Event</inlineHelpText>
        <label>Registered Attendees</label>
        <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by PMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by PMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tar__c</fullName>
        <label>Target Audience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Targeted_Attendance__c</fullName>
        <label>Targeted Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Event ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Actual_MDF__c</fullName>
        <label>Total Actual MDF</label>
        <summarizedField>Event_MDF__c.MDF_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Event_MDF__c.Received_Payment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_MDF__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expected_MDF__c</fullName>
        <label>Total Expected MDF</label>
        <summarizedField>Event_MDF__c.MDF_Amount__c</summarizedField>
        <summaryForeignKey>Event_MDF__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <formula>Expenses_Site_Rental__c + Expenses_Catering__c +  Expenses_Transportation__c +  Expenses_Decor__c  + Expenses_Printing__c + Expenses_Activities__c + Expenses_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Expenses (Actual Gross Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_City__c</fullName>
        <formula>Venue__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Country__c</fullName>
        <formula>Venue__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Postal_Code__c</fullName>
        <formula>Venue__r.Postal_Code_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_State__c</fullName>
        <formula>Venue__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Status__c</fullName>
        <label>Venue Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Publish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_Street_Address_1__c</fullName>
        <formula>Venue__r.Street_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Street Address #1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Street_Address_2__c</fullName>
        <formula>Venue__r.Street_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Street Address #2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Venue_City__c</columns>
        <columns>Venue_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>